istio-mpol/add-ambient-mode-namespace/.chainsaw-test/patched-ns-none.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
  name: istio-test-none-ns
